refactor(service): ajusta lógica de cálculo e atualização de TSS e métricas